tests/snapshots/pre_reduce_run@tests::programs::nums.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/nums.hvm
---
[#12345 [#0 [#0 [#-12345 [#2748 [#-2748 [#10 [#-10 [#1.0 [#0.1 [#0.001 [#-123.123 [#-1204.5 [#NaN [#NaN [#inf [#-inf *]]]]]]]]]]]]]]]]]
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :              36
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              36
- OPER :               0
