tests/snapshots/pre_reduce_run@tests::programs::queue.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/queue.hvm
---
(((* (a a)) (((((b c) (b c)) (((({3 (d e) (f d)} (f e)) ((* (g g)) h)) (* h)) i)) (* i)) j)) (* j))
pre-reduce:
RWTS   :               8
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               8
- OPER :               0
run:
RWTS   :             102
- ANNI :              39
- COMM :               1
- ERAS :               4
- DREF :              58
- OPER :               0
