tests/snapshots/pre_reduce_run@tests::programs::stress_tests::boom.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/boom.hvm
---
(a (* a))
pre-reduce:
RWTS   :              24
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              24
- OPER :               0
run:
RWTS   :     134_217_907
- ANNI :      33_554_556
- COMM :      67_108_895
- ERAS :      16_777_216
- DREF :      16_777_240
- OPER :               0
