tests/snapshots/pre_reduce_run@tests::programs::stress_tests::burn.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/burn.hvm
---
((((* (* (* (a a)))) (* (* (* (b b))))) ((* (* (* (c c)))) (* (* (* (d d)))))) (((* (* (* (e e)))) (* (* (* (f f))))) ((* (* (* (g g)))) (* (* (* (h h)))))))
pre-reduce:
RWTS   :      18_350_068
- ANNI :      10_485_712
- COMM :              19
- ERAS :       5_242_846
- DREF :       2_621_491
- OPER :               0
run:
RWTS   :             211
- ANNI :              47
- COMM :              25
- ERAS :              15
- DREF :             124
- OPER :               0
