tests/snapshots/pre_reduce_run@tests::programs::stress_tests::fib_rec.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/fib_rec.hvm
---
~1346269
pre-reduce:
RWTS   :              13
- ANNI :               6
- COMM :               0
- ERAS :               0
- DREF :               7
- OPER :               0
run:
RWTS   :      29_028_655
- ANNI :      10_573_730
- COMM :       2_178_308
- ERAS :       5_702_885
- DREF :       4_356_619
- OPER :       6_217_113
