tests/snapshots/pre_reduce_run@tests::programs::stress_tests::sum_rec.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_rec.hvm
---
8388608
pre-reduce:
RWTS   :              13
- ANNI :               7
- COMM :               0
- ERAS :               0
- DREF :               6
- OPER :               0
run:
RWTS   :      83_886_077
- ANNI :      25_165_823
- COMM :       8_388_607
- ERAS :      16_777_215
- DREF :       8_388_610
- OPER :      25_165_822
