tests/snapshots/pre_reduce_run@tests::programs::stress_tests::sum_tail.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_tail.hvm
---
#49999995000000
pre-reduce:
RWTS   :               6
- ANNI :               3
- COMM :               0
- ERAS :               0
- DREF :               3
- OPER :               0
run:
RWTS   :      90_000_008
- ANNI :      30_000_003
- COMM :      20_000_000
- ERAS :      10_000_001
- DREF :      10_000_003
- OPER :      20_000_001
