tests/snapshots/pre_reduce_run@tests::programs::stress_tests::sum_tree.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_tree.hvm
---
~16777216
pre-reduce:
RWTS   :              30
- ANNI :              14
- COMM :               0
- ERAS :               0
- DREF :              16
- OPER :               0
run:
RWTS   :     436_207_603
- ANNI :     167_772_156
- COMM :      83_886_075
- ERAS :     100_663_292
- DREF :      33_554_434
- OPER :      50_331_646
